Add early stopping hint

--- a/DEEP-LEARNING/code/SVHN.ipynb
+++ b/DEEP-LEARNING/code/SVHN.ipynb
@@ -349,6 +349,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45f061a7-9391-4d1c-945a-6efc9d6ab7df",
+   "metadata": {},
+   "source": [
+    "Note we have started to over-fit (validation loss increases while training loss still decreases).\n",
+    "\n",
+    "We can set the model to use early stopping based on increasing validation loss:\n",
+    "\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "# Define early stopping callback\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=5)\n",
+    "\n",
+    "# Train the model with early stopping\n",
+    "history = model.fit(X_train, y_train, epochs=50, validation_data=(X_val, y_val), callbacks=[early_stopping])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "ab4a49e3-4b64-41a9-b506-5c8282120b19",
