--- a/DEEP-LEARNING/code/Easy_Network_with_Keras.ipynb
+++ b/DEEP-LEARNING/code/Easy_Network_with_Keras.ipynb
@@ -896,7 +896,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "tf2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -910,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
